--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>𝓢𝓡 Interior — Modern Interior & Design</title>
 <meta name="description" content="SR Interior — Professional Interior Design & Construction services in Karachi. Modern, minimal spaces crafted with precision." />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>SR Interior | Best Interior Design & Construction in Karachi</title>
+  <meta name="description" content="SR Interior offers premium interior design & construction services in Karachi. Modern, minimal, and functional spaces tailored to your lifestyle. Get a free quote today." />
+  <meta name="keywords" content="SR Interior, Interior Design Karachi, Interior Designers in Karachi, Home Interior, Office Interior, Modern Interior, Construction Services Karachi" />
+  <meta name="author" content="SR Interior Karachi" />
+
+  <!-- Open Graph (Social SEO) -->
+  <meta property="og:title" content="SR Interior | Interior Design in Karachi" />
+  <meta property="og:description" content="Transform your home & office with SR Interior Karachi. Professional interior design & construction services." />
+  <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SR Interior | Interior Design Karachi" />
+  <meta name="twitter:description" content="Best interior design & construction services in Karachi. Book your consultation today!" />
+  <meta name="twitter:image" content="https://yourdomain.com/og-image.jpg" />
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
 <style>
